my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESYNTAX_17/ESYNTAX_17.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ESYNTAX_17.dml:11:19: error ESYNTAX: syntax error at '\v': unrecognised character escape sequence
